--- a/src/include/head.html
+++ b/src/include/head.html
@@ -3,7 +3,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="format-detection" content="telephone=no"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<title>NH투자증권 VIP</title>
+	<title>신한라이프 VIP</title>
 	<link href="./assets/css/reset.css" rel="stylesheet">
 	<link href="./assets/css/swiper.min.css" rel="stylesheet">
 	<link href="./assets/css/layout.css" rel="stylesheet">
