--- a/src/include/footer.html
+++ b/src/include/footer.html
@@ -1,3 +1,15 @@
 <footer class="footer_section">
-	
+	<div class="footer_inner">
+        <div class="footer_logo"><img src="./assets/images/footer_logo.png" alt="신한라이프"></div>
+        <div class="footer_liquid">
+            <ul class="bottom_menu_list">
+                <li><a href="#" class="bottom_menu">개인정보처리방침</a></li>
+            </ul>
+            <ul class="bottom_guide_item_list">
+                <li><span class="bottom_guide_item">SOL ON 우수고객 서비스 전담센터 02.000.0000</span></li>
+                <li><span class="bottom_guide_item">이용시간 09:00-17:30(점심시간 12:00-13:00, 주말, 공휴일 제외)</span></li>
+            </ul>
+            <p class="bottom_copyright">ⓒ 2024 SOL ON vip Co., Ltd.</p>
+        </div>
+    </div>
 </footer>
