1차세팅 완료

--- a/src/include/header2.html
+++ b/src/include/header2.html
@@ -15,7 +15,7 @@
 			<ul class="nav_list">
 				<li name="gnb_info"><a href="#" class="nav_item"><span class="nav_item_text">서비스안내</span></a></li>
 				<li name="gnb_solon"><a href="#" class="nav_item"><span class="nav_item_text">SOL ON 서비스</span></a></li>
-				<li name="gnb_history"><a href="#" class="nav_item"><span class="nav_item_text">신청내역</span></a></li>
+				<li name="gnb_history"><a href="#" class="nav_item"><span class="nav_item_text">SOL ON 서비스 신청 및 조회</span></a></li>
 				<li name="gnb_customer"><a href="#" class="nav_item"><span class="nav_item_text">공지사항</span></a></li>
 			</ul>
 		</nav>
@@ -42,7 +42,7 @@
 							<a href="#" class="mbmenu_one">SOL ON 서비스</a>
 						</li>
 						<li name="gnb_history">
-							<a href="#" class="mbmenu_one">신청내역</a>
+							<a href="#" class="mbmenu_one">SOL ON 서비스 신청 및 조회</a>
 						</li>
 						<li name="gnb_customer">
 							<a href="#" class="mbmenu_one">공지사항</a>
